--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,13 @@
-<app-root>loading</app-root>
+<!-- <app-root>loading</app-root> -->
+<!doctype html>
+<html lang="en">
+ 
+<head>
+  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Ubuntu+Mono"/>
+</head>
+ 
+<body>
+  <app-root>Loading..</app-root>
+</body>
+ 
+</html>
